# fulgul

./: .gitignore  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  build-windows.sh  generate-keys.sh  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: CI.md  build-all.yml  build-android.yml  build-linux.yml  (+2 more)
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
components/: FilterBar.tsx  LogsConsole.tsx  PortTable.tsx  ResponsiveLayout.tsx  ResultCard.tsx  ScanButton.tsx  ScanProgress.tsx  SecurityScoreGauge.tsx  Sidebar.tsx  Terminal.tsx  Topbar.tsx  VulnerabilityCard.tsx  VulnerabilityTable.tsx
docs/: CI.md
hooks/: useLocalScan.ts  useRemoteScan.ts  useSecurityOverview.ts
lib/: scan.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/attacks/: enumeration.rs  mod.rs  recon.rs  scenarios.rs  services.rs  simulator.rs
src-tauri/src/attacks/bruteforce/: http.rs  jobs.rs  mod.rs  shell.rs  ssh.rs  wifi.rs  wordlists.rs
src-tauri/src/command/: mod.rs
src-tauri/src/hardening/: applier.rs  detector.rs  mod.rs  tasks.rs
src-tauri/src/remediation/: fixes.rs  mod.rs
src-tauri/src/scanner/: checks.rs  local.rs  local_extra.rs  mod.rs  probes.rs  remote.rs  utils.rs
src-tauri/src/storage/: activity_log.rs  defense_workspace.rs  engagements.rs  json_storage.rs  loot.rs  mod.rs  reports.rs  workspace.rs
src-tauri/src/terminal/: executor.rs  mod.rs  runner.rs  session.rs
types/: tauri.ts
(+35 files in other folders)
