[package]
name = "fulgul"
version = "1.0.5"
description = "A Tauri App"
authors = ["thinking-mindy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fulgul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "process", "net", "fs", "sync"] }
futures = "0.3"
rand = { version = "0.8", features = ["std"] }
chrono = "0.4"
ipnetwork = "0.20"
regex = "1"
lazy_static = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
printpdf = "0.7"

